deleting view directory

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="../css/home.css">
+		<link rel="stylesheet" type="text/css" href="css/home.css">
 		<link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	</head>
@@ -27,17 +27,17 @@
 								<ul class="category-list">
 									<li class="category">
 										<div>
-											<a href=""><img src="../images/camera_icon.png"></a>
+											<a href=""><img src="images/camera_icon.png"></a>
 										</div>
 									</li>
 									<li class="category">
 										<div>
-											<a href=""><img src="../images/phone.png"></a>
+											<a href=""><img src="images/phone.png"></a>
 										</div>
 									</li>
 									<li class="category">
 										<div>
-											<a href=""><img src="../images/laptop.png"></a>
+											<a href=""><img src="images/laptop.png"></a>
 										</div>
 									</li>
 									<li class="category">
@@ -67,11 +67,11 @@
 								 					</div>
 								 					<div class="row row-table">
 								 						<div class="col-xs-6">
-								 							<img src="../images/review.png">
+								 							<img src="images/review.png">
 															<span class="count">25</span>
 								 						</div>
 								 						<div class="col-xs-6 text-right">
-								 							<img src="../images/heart.png">
+								 							<img src="images/heart.png">
 															<span class="count">3.5</span>
 								 						</div>
 								 					</div>											
@@ -91,11 +91,11 @@
 								 					</div>
 								 					<div class="row row-table">
 								 						<div class="col-xs-6">
-								 							<img src="../images/review.png">
+								 							<img src="images/review.png">
 															<span class="count">25</span>
 								 						</div>
 								 						<div class="col-xs-6 text-right">
-								 							<img src="../images/heart.png">
+								 							<img src="images/heart.png">
 															<span class="count">3.5</span>
 								 						</div>
 								 					</div>											
@@ -114,11 +114,11 @@
 								 					</div>
 								 					<div class="row row-table">
 								 						<div class="col-xs-6">
-								 							<img src="../images/review.png">
+								 							<img src="images/review.png">
 															<span class="count">25</span>
 								 						</div>
 								 						<div class="col-xs-6 text-right">
-								 							<img src="../images/heart.png">
+								 							<img src="images/heart.png">
 															<span class="count">3.5</span>
 								 						</div>
 								 					</div>											
