--- a/src/main/webapp/arena2.html
+++ b/src/main/webapp/arena2.html
@@ -16,7 +16,7 @@
     <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 
     <!-- App CSS -->
-    <link rel="stylesheet" href="../css/arena2.css">
+    <link rel="stylesheet" href="css/arena2.css">
 
 </head>
 <body>
@@ -50,9 +50,9 @@
 
         <div class="star-region">
             <div class="row">
-                <div class="col-md-4"><img src="../images/star.png" class="star-sm"></div>
-                <div class="col-md-4"><img src="../images/star.png" class="star-md"></div>
-                <div class="col-md-4"><img src="../images/star.png" class="star-sm"></div>
+                <div class="col-md-4"><img src="images/star.png" class="star-sm"></div>
+                <div class="col-md-4"><img src="images/star.png" class="star-md"></div>
+                <div class="col-md-4"><img src="images/star.png" class="star-sm"></div>
             </div>
             <!--<div class="row" style="text-align: right">
                 <div class="col-md-4"><img src="../images/star.png" width="30px" height="30px"></div>
@@ -63,7 +63,7 @@
         </div>
 
         <div class="product-region">
-            <img src="../images/nexus5.png" width="300" height="246">
+            <img src="images/nexus5.png" width="300" height="246">
             <marquee>Nexus 5</marquee>
         </div>
         <div class="input-region">
@@ -85,7 +85,7 @@
         <span>© Copyright Revify</span>
     </footer>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="../js/arena.js"></script>
+    <script src="js/arena.js"></script>
 </div>
 </body>
 </html>
