--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="../js/ratings.js"></script>
+    <script src="js/ratings.js"></script>
     <style type="text/css">
        .row {
            margin-top: 50px;
@@ -31,31 +31,31 @@
         </div>       
         <div class="col-md-2">
             <label id = "product1">Nexus 4</label><br/>
-            <img src="../images/nexus4.jpg" id="img1" alt="Nexus 4" width="100" height="100"/><br/><br/><br/>
+            <img src="images/nexus4.jpg" id="img1" alt="Nexus 4" width="100" height="100"/><br/><br/><br/>
             <label id="product2">iPhone 6</label><br/>
-            <img src="../images/iphone6.jpg" id="img2" alt="iPhone 6" width="100" height="100"/><br/><br/>
+            <img src="images/iphone6.jpg" id="img2" alt="iPhone 6" width="100" height="100"/><br/><br/>
         </div>
         <div class="col-md-3">
             <div class="product">
-            <img src="../images/camera.png" id="featureimg1" alt="Camera" width="40" height="40"/>
+            <img src="images/camera.png" id="featureimg1" alt="Camera" width="40" height="40"/>
             <label id="feature1">2 stars</label>
             <br/><br/>
-            <img src="../images/battery.png" id="featureimg2" alt="Battery" width="40" height="40"/>
+            <img src="images/battery.png" id="featureimg2" alt="Battery" width="40" height="40"/>
             <label id="feature2">2 stars</label>
             <br/><br/>
-            <img src="../images/wifi.png" id="featureimg3" alt="Wifi" width="40" height="40"/>
+            <img src="images/wifi.png" id="featureimg3" alt="Wifi" width="40" height="40"/>
             <label id="feature3">2 stars</label>
             <br/>
             </div>
             <br/>
             <div class="product">
-            <img src="../images/camera.png" id="featureimg4" alt="" width="40" height="40"/>
+            <img src="images/camera.png" id="featureimg4" alt="" width="40" height="40"/>
             <label id="feature4">2 stars</label>
             <br/><br/>
-            <img src="../images/battery.png" id="featureimg5" alt="" width="40" height="40"/>
+            <img src="images/battery.png" id="featureimg5" alt="" width="40" height="40"/>
             <label id="feature5">2 stars</label>
             <br/><br/>
-            <img src="../images/wifi.png" id="featureimg6" alt="" width="40" height="40"/>
+            <img src="images/wifi.png" id="featureimg6" alt="" width="40" height="40"/>
             <label id="feature6">2 stars</label>
             <br/>
             </div>
