Add game start screen, update arena

--- a/src/main/webapp/arena2.html
+++ b/src/main/webapp/arena2.html
@@ -78,7 +78,10 @@
                 <a href="#" class="push-button">5</a>
             </div>
         </div>
+
+        <div id="score" class="score">250</div>
     </section>
+
 
     <!-- footer -->
     <footer>
