--- a/src/main/webapp/detailedReviews.html
+++ b/src/main/webapp/detailedReviews.html
@@ -1,11 +1,161 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <meta charset="UTF-8">
-    <title>Detailed User Reviews</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="css/layout.css">
+    <link rel="stylesheet" type="text/css" href="css/detailed.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 </head>
 <body>
+<div class="wrapper">
+    <header>
+        <nav class="navbar navbar-background navbar-fixed-top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <span class="logo">Revify</span>
+                    </div>
+                    <div class="login col-md-6">
+                        <a class="text-uppercase" href="">Log In</a>
+                        <img src="images/login-icon-purple.png">
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
 
+    <section>
+
+        <div class="product-name">
+            Nexus 5 User Reviews
+        </div>
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading"><strong>#joe</strong><span class="pull-right">2 days ago</span></div>
+                        <div class="panel-body">
+                            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                                <span class="overall">3.0
+                                    <span>Overall</span>
+                                </span>
+                            </div>
+                            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+                                <ul>
+                                    <li class="ratings-bar-style">
+                                        <div class="feature-wrap"><span>Camera</span><strong class="pull-right">2.5</strong></div>
+                                        <div class="bar-wrap"><a style="width:50%;" class="votes-wrap"><span class="votes"></span></a></div>
+                                    </li>
+                                    <li class="ratings-bar-style">
+                                        <div class="feature-wrap"><span>Connectivity</span><strong class="pull-right">3.0</strong></div>
+                                        <div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>
+                                    </li>
+                                    <li class="ratings-bar-style">
+                                        <div class="feature-wrap"><span>Bluetooth</span><strong class="pull-right">4.0</strong></div>
+                                        <div class="bar-wrap"><a style="width:80%;" class="votes-wrap"><span class="votes"></span></a></div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading"><strong>#vijaya</strong><span class="pull-right">1 day ago</span></div>
+                        <div class="panel-body">
+                            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                                <span class="overall">4.0
+                                    <span>Overall</span>
+                                </span>
+                            </div>
+                            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+                                <ul>
+                                    <li class="ratings-bar-style">
+                                        <div class="feature-wrap"><span>Camera</span><strong class="pull-right">4.0</strong></div>
+                                        <div class="bar-wrap"><a style="width:80%;" class="votes-wrap"><span class="votes"></span></a></div>
+                                    </li>
+                                    <li class="ratings-bar-style">
+                                        <div class="feature-wrap"><span>Connectivity</span><strong class="pull-right">3.0</strong></div>
+                                        <div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>
+                                    </li>
+                                    <li class="ratings-bar-style">
+                                        <div class="feature-wrap"><span>Bluetooth</span><strong class="pull-right">4.0</strong></div>
+                                        <div class="bar-wrap"><a style="width:80%;" class="votes-wrap"><span class="votes"></span></a></div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading"><strong>#mohul</strong><span class="pull-right">4 days ago</span></div>
+                        <div class="panel-body">
+                            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                                <span class="overall">3.0
+                                    <span>Overall</span>
+                                </span>
+                            </div>
+                            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+                                <ul>
+                                    <li class="ratings-bar-style">
+                                        <div class="feature-wrap"><span>Camera</span><strong class="pull-right">3.0</strong></div>
+                                        <div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>
+                                    </li>
+                                    <li class="ratings-bar-style">
+                                        <div class="feature-wrap"><span>Connectivity</span><strong class="pull-right">3.0</strong></div>
+                                        <div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>
+                                    </li>
+                                    <li class="ratings-bar-style">
+                                        <div class="feature-wrap"><span>Bluetooth</span><strong class="pull-right">4.0</strong></div>
+                                        <div class="bar-wrap"><a style="width:80%;" class="votes-wrap"><span class="votes"></span></a></div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading"><strong>#kalyani</strong><span class="pull-right">10 hrs ago</span></div>
+                        <div class="panel-body">
+                            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                                <span class="overall">3.0
+                                    <span>Overall</span>
+                                </span>
+                            </div>
+                            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+                                <ul>
+                                    <li class="ratings-bar-style">
+                                        <div class="feature-wrap"><span>Camera</span><strong class="pull-right">3.0</strong></div>
+                                        <div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>
+                                    </li>
+                                    <li class="ratings-bar-style">
+                                        <div class="feature-wrap"><span>Connectivity</span><strong class="pull-right">3.0</strong></div>
+                                        <div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>
+                                    </li>
+                                    <li class="ratings-bar-style">
+                                        <div class="feature-wrap"><span>Bluetooth</span><strong class="pull-right">3.0</strong></div>
+                                        <div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- footer -->
+    <footer>
+        <span>© Copyright Revify</span>
+    </footer>
+</div>
 
 </body>
 </html>
