Link all html pages

--- a/src/main/webapp/arena2.html
+++ b/src/main/webapp/arena2.html
@@ -63,8 +63,8 @@
         </div>
 
         <div class="product-region">
-            <img src="images/nexus5.png" width="300" height="246">
-            <marquee>Nexus 5</marquee>
+            <img src="" width="300" height="246">
+            <marquee></marquee>
         </div>
         <div class="input-region">
             <div class="start">
