--- a/src/main/webapp/detailedReviews.html
+++ b/src/main/webapp/detailedReviews.html
@@ -2,6 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="utf-8">
+    <title>User Reviews</title>
     <link rel="stylesheet" type="text/css" href="css/layout.css">
     <link rel="stylesheet" type="text/css" href="css/detailed.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto' rel='stylesheet' type='text/css'>
@@ -20,7 +21,7 @@
                         <span class="logo">Revify</span>
                     </div>
                     <div class="login col-md-6">
-                        <a class="text-uppercase" href="">Log In</a>
+                        <a class="text-uppercase" href="start.html">Log In</a>
                         <img src="images/login-icon-purple.png">
                     </div>
                 </div>
@@ -31,7 +32,7 @@
     <section>
 
         <div class="product-name">
-            Nexus 5 User Reviews
+            Nikon D7200 User Reviews
         </div>
         <div class="container">
 
@@ -48,7 +49,7 @@
                             <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
                                 <ul>
                                     <li class="ratings-bar-style">
-                                        <div class="feature-wrap"><span>Camera</span><strong class="pull-right">2.5</strong></div>
+                                        <div class="feature-wrap"><span>Lens</span><strong class="pull-right">2.5</strong></div>
                                         <div class="bar-wrap"><a style="width:50%;" class="votes-wrap"><span class="votes"></span></a></div>
                                     </li>
                                     <li class="ratings-bar-style">
@@ -56,7 +57,7 @@
                                         <div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>
                                     </li>
                                     <li class="ratings-bar-style">
-                                        <div class="feature-wrap"><span>Bluetooth</span><strong class="pull-right">4.0</strong></div>
+                                        <div class="feature-wrap"><span>Resolution</span><strong class="pull-right">4.0</strong></div>
                                         <div class="bar-wrap"><a style="width:80%;" class="votes-wrap"><span class="votes"></span></a></div>
                                     </li>
                                 </ul>
@@ -76,15 +77,15 @@
                             <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
                                 <ul>
                                     <li class="ratings-bar-style">
-                                        <div class="feature-wrap"><span>Camera</span><strong class="pull-right">4.0</strong></div>
+                                        <div class="feature-wrap"><span>Lens</span><strong class="pull-right">4.0</strong></div>
                                         <div class="bar-wrap"><a style="width:80%;" class="votes-wrap"><span class="votes"></span></a></div>
                                     </li>
                                     <li class="ratings-bar-style">
-                                        <div class="feature-wrap"><span>Connectivity</span><strong class="pull-right">3.0</strong></div>
+                                        <div class="feature-wrap"><span>Zoom</span><strong class="pull-right">3.0</strong></div>
                                         <div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>
                                     </li>
                                     <li class="ratings-bar-style">
-                                        <div class="feature-wrap"><span>Bluetooth</span><strong class="pull-right">4.0</strong></div>
+                                        <div class="feature-wrap"><span>Resolution</span><strong class="pull-right">4.0</strong></div>
                                         <div class="bar-wrap"><a style="width:80%;" class="votes-wrap"><span class="votes"></span></a></div>
                                     </li>
                                 </ul>
@@ -104,7 +105,7 @@
                             <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
                                 <ul>
                                     <li class="ratings-bar-style">
-                                        <div class="feature-wrap"><span>Camera</span><strong class="pull-right">3.0</strong></div>
+                                        <div class="feature-wrap"><span>Lens</span><strong class="pull-right">3.0</strong></div>
                                         <div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>
                                     </li>
                                     <li class="ratings-bar-style">
@@ -112,7 +113,7 @@
                                         <div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>
                                     </li>
                                     <li class="ratings-bar-style">
-                                        <div class="feature-wrap"><span>Bluetooth</span><strong class="pull-right">4.0</strong></div>
+                                        <div class="feature-wrap"><span>Resolution</span><strong class="pull-right">4.0</strong></div>
                                         <div class="bar-wrap"><a style="width:80%;" class="votes-wrap"><span class="votes"></span></a></div>
                                     </li>
                                 </ul>
@@ -132,7 +133,7 @@
                             <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
                                 <ul>
                                     <li class="ratings-bar-style">
-                                        <div class="feature-wrap"><span>Camera</span><strong class="pull-right">3.0</strong></div>
+                                        <div class="feature-wrap"><span>Lens</span><strong class="pull-right">3.0</strong></div>
                                         <div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>
                                     </li>
                                     <li class="ratings-bar-style">
@@ -140,7 +141,7 @@
                                         <div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>
                                     </li>
                                     <li class="ratings-bar-style">
-                                        <div class="feature-wrap"><span>Bluetooth</span><strong class="pull-right">3.0</strong></div>
+                                        <div class="feature-wrap"><span>Resolution</span><strong class="pull-right">3.0</strong></div>
                                         <div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>
                                     </li>
                                 </ul>
