--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -26,7 +26,7 @@
                         </div>
                     </div>
                     <div class="login col-md-6">
-                        <a class="text-uppercase" href="">Log In</a>
+                        <a class="text-uppercase" href="start.html">Log In</a>
                         <img src="images/login-icon-purple.png">
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                     <div class="row">
                         <div class="col-md-12 review-heading">
                             <span class="review-heading-left-block">Latest Cell Phone Reviews</span>
-                            <a href=""><span class="review-heading-right-block">See more</span></a>
+                            <a href="user-reviews.html"><span class="review-heading-right-block">See more</span></a>
                         </div>
                      </div>   
                         <div class="row">
@@ -93,7 +93,7 @@
                                 <div class="review-panel review-card">
                                     <div class="review-card-image review-border">
                                         <a href="">
-                                            <img class="img-responsive" src="images/products/iPhone6-plus.jpg">
+                                            <img class="img-responsive" src="images/products/iphone6-plus.jpg">
                                         </a>
                                     </div>    
                                     <div class="review-panel-body">
@@ -248,7 +248,7 @@
                      <div class="row">
                         <div class="col-md-12 review-heading">
                             <span class="review-heading-left-block">Latest Camera Reviews</span>
-                            <a href=""><span class="review-heading-right-block">See more</span></a>
+                            <a href="user-reviews.html"><span class="review-heading-right-block">See more</span></a>
                         </div>
                      </div>   
                         <div class="row">
