--- a/src/main/webapp/user-reviews.html
+++ b/src/main/webapp/user-reviews.html
@@ -25,7 +25,7 @@
                        		 </div>
                     	</div>
                     	<div class="login col-md-6">
-                        	<a class="text-uppercase" href="">Log In</a>
+                        	<a class="text-uppercase" href="start.html">Log In</a>
                         	<img src="images/login-icon-purple.png">
                     	</div>
 					</div>
@@ -50,7 +50,7 @@
 								<div class="rating green">
 									<span>4</span>
 								</div>
-								<a href=""><span class="review-count">11 reviews</span></a>
+								<a href="detailedReviews.html"><span class="review-count">4 reviews</span></a>
 							</div>
 
 							<div class="col-md-9">
@@ -322,7 +322,7 @@
     <footer>
         <p>©Company Copyright</p>
     </footer>
-
+        <script src="js/home.js"></script>
 	</div>
 </body>
 </html>
