--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -49,7 +49,7 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">                      
                          <div class="item active hot-product-background">
-                            <img src="images/hot-products/hot-iphone6plus-background.png" class-"img-responsive">
+                            <img src="images/hot-products/hot-iphone6plus-background.png" class="img-responsive">
                      
                             <!-- <div class="carousel-caption">
                                 <span style="font-size:20px">iPhone 6</span>
@@ -57,7 +57,7 @@
                          </div>
 
                          <div class="item hot-product-background">
-                            <img src="images/hot-products/hot-michael-kors-mens-watch-background.png" class-"img-responsive">
+                            <img src="images/hot-products/hot-michael-kors-mens-watch-background.png" class="img-responsive">
                             
                            <!--  <div class="carousel-caption">
                                 <span style="font-size:20px">iPhone 6</span>
