End-2-end implementation for detailed review page

--- a/src/main/webapp/detailedReviews.html
+++ b/src/main/webapp/detailedReviews.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <script src = "js/detailedReviews.js"></script>
 </head>
 <body>
 <div class="wrapper">
@@ -29,126 +30,122 @@
         </nav>
     </header>
 
-    <section>
+    <section id = "section">
+        <div class="container" id = "container">
 
-        <div class="product-name">
-            Nikon D7200 User Reviews
-        </div>
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <div class="panel panel-default">
-                        <div class="panel-heading"><strong>#joe</strong><span class="pull-right">2 days ago</span></div>
-                        <div class="panel-body">
-                            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-                                <span class="overall">3.0
-                                    <span>Overall</span>
-                                </span>
-                            </div>
-                            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-                                <ul>
-                                    <li class="ratings-bar-style">
-                                        <div class="feature-wrap"><span>Lens</span><strong class="pull-right">2.5</strong></div>
-                                        <div class="bar-wrap"><a style="width:50%;" class="votes-wrap"><span class="votes"></span></a></div>
-                                    </li>
-                                    <li class="ratings-bar-style">
-                                        <div class="feature-wrap"><span>Connectivity</span><strong class="pull-right">3.0</strong></div>
-                                        <div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>
-                                    </li>
-                                    <li class="ratings-bar-style">
-                                        <div class="feature-wrap"><span>Resolution</span><strong class="pull-right">4.0</strong></div>
-                                        <div class="bar-wrap"><a style="width:80%;" class="votes-wrap"><span class="votes"></span></a></div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <div class="panel panel-default">
-                        <div class="panel-heading"><strong>#vijaya</strong><span class="pull-right">1 day ago</span></div>
-                        <div class="panel-body">
-                            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-                                <span class="overall">4.0
-                                    <span>Overall</span>
-                                </span>
-                            </div>
-                            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-                                <ul>
-                                    <li class="ratings-bar-style">
-                                        <div class="feature-wrap"><span>Lens</span><strong class="pull-right">4.0</strong></div>
-                                        <div class="bar-wrap"><a style="width:80%;" class="votes-wrap"><span class="votes"></span></a></div>
-                                    </li>
-                                    <li class="ratings-bar-style">
-                                        <div class="feature-wrap"><span>Zoom</span><strong class="pull-right">3.0</strong></div>
-                                        <div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>
-                                    </li>
-                                    <li class="ratings-bar-style">
-                                        <div class="feature-wrap"><span>Resolution</span><strong class="pull-right">4.0</strong></div>
-                                        <div class="bar-wrap"><a style="width:80%;" class="votes-wrap"><span class="votes"></span></a></div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <div class="panel panel-default">
-                        <div class="panel-heading"><strong>#mohul</strong><span class="pull-right">4 days ago</span></div>
-                        <div class="panel-body">
-                            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-                                <span class="overall">3.0
-                                    <span>Overall</span>
-                                </span>
-                            </div>
-                            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-                                <ul>
-                                    <li class="ratings-bar-style">
-                                        <div class="feature-wrap"><span>Lens</span><strong class="pull-right">3.0</strong></div>
-                                        <div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>
-                                    </li>
-                                    <li class="ratings-bar-style">
-                                        <div class="feature-wrap"><span>Connectivity</span><strong class="pull-right">3.0</strong></div>
-                                        <div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>
-                                    </li>
-                                    <li class="ratings-bar-style">
-                                        <div class="feature-wrap"><span>Resolution</span><strong class="pull-right">4.0</strong></div>
-                                        <div class="bar-wrap"><a style="width:80%;" class="votes-wrap"><span class="votes"></span></a></div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <div class="panel panel-default">
-                        <div class="panel-heading"><strong>#kalyani</strong><span class="pull-right">10 hrs ago</span></div>
-                        <div class="panel-body">
-                            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-                                <span class="overall">3.0
-                                    <span>Overall</span>
-                                </span>
-                            </div>
-                            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-                                <ul>
-                                    <li class="ratings-bar-style">
-                                        <div class="feature-wrap"><span>Lens</span><strong class="pull-right">3.0</strong></div>
-                                        <div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>
-                                    </li>
-                                    <li class="ratings-bar-style">
-                                        <div class="feature-wrap"><span>Connectivity</span><strong class="pull-right">3.0</strong></div>
-                                        <div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>
-                                    </li>
-                                    <li class="ratings-bar-style">
-                                        <div class="feature-wrap"><span>Resolution</span><strong class="pull-right">3.0</strong></div>
-                                        <div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <!--<div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">-->
+                    <!--<div class="panel panel-default">-->
+                        <!--<div class="panel-heading"><strong>#joe</strong><span class="pull-right">2 days ago</span></div>-->
+                        <!--<div class="panel-body">-->
+                            <!--<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">-->
+                                <!--<span class="overall">3.0-->
+                                    <!--<span>Overall</span>-->
+                                <!--</span>-->
+                            <!--</div>-->
+                            <!--<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">-->
+                                <!--<ul>-->
+                                    <!--<li class="ratings-bar-style">-->
+                                        <!--<div class="feature-wrap"><span>Lens</span><strong class="pull-right">2.5</strong></div>-->
+                                        <!--<div class="bar-wrap"><a style="width:50%;" class="votes-wrap"><span class="votes"></span></a></div>-->
+                                    <!--</li>-->
+                                    <!--<li class="ratings-bar-style">-->
+                                        <!--<div class="feature-wrap"><span>Connectivity</span><strong class="pull-right">3.0</strong></div>-->
+                                        <!--<div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>-->
+                                    <!--</li>-->
+                                    <!--<li class="ratings-bar-style">-->
+                                        <!--<div class="feature-wrap"><span>Resolution</span><strong class="pull-right">4.0</strong></div>-->
+                                        <!--<div class="bar-wrap"><a style="width:80%;" class="votes-wrap"><span class="votes"></span></a></div>-->
+                                    <!--</li>-->
+                                <!--</ul>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">-->
+                    <!--<div class="panel panel-default">-->
+                        <!--<div class="panel-heading"><strong>#vijaya</strong><span class="pull-right">1 day ago</span></div>-->
+                        <!--<div class="panel-body">-->
+                            <!--<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">-->
+                                <!--<span class="overall">4.0-->
+                                    <!--<span>Overall</span>-->
+                                <!--</span>-->
+                            <!--</div>-->
+                            <!--<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">-->
+                                <!--<ul>-->
+                                    <!--<li class="ratings-bar-style">-->
+                                        <!--<div class="feature-wrap"><span>Lens</span><strong class="pull-right">4.0</strong></div>-->
+                                        <!--<div class="bar-wrap"><a style="width:80%;" class="votes-wrap"><span class="votes"></span></a></div>-->
+                                    <!--</li>-->
+                                    <!--<li class="ratings-bar-style">-->
+                                        <!--<div class="feature-wrap"><span>Zoom</span><strong class="pull-right">3.0</strong></div>-->
+                                        <!--<div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>-->
+                                    <!--</li>-->
+                                    <!--<li class="ratings-bar-style">-->
+                                        <!--<div class="feature-wrap"><span>Resolution</span><strong class="pull-right">4.0</strong></div>-->
+                                        <!--<div class="bar-wrap"><a style="width:80%;" class="votes-wrap"><span class="votes"></span></a></div>-->
+                                    <!--</li>-->
+                                <!--</ul>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">-->
+                    <!--<div class="panel panel-default">-->
+                        <!--<div class="panel-heading"><strong>#mohul</strong><span class="pull-right">4 days ago</span></div>-->
+                        <!--<div class="panel-body">-->
+                            <!--<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">-->
+                                <!--<span class="overall">3.0-->
+                                    <!--<span>Overall</span>-->
+                                <!--</span>-->
+                            <!--</div>-->
+                            <!--<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">-->
+                                <!--<ul>-->
+                                    <!--<li class="ratings-bar-style">-->
+                                        <!--<div class="feature-wrap"><span>Lens</span><strong class="pull-right">3.0</strong></div>-->
+                                        <!--<div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>-->
+                                    <!--</li>-->
+                                    <!--<li class="ratings-bar-style">-->
+                                        <!--<div class="feature-wrap"><span>Connectivity</span><strong class="pull-right">3.0</strong></div>-->
+                                        <!--<div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>-->
+                                    <!--</li>-->
+                                    <!--<li class="ratings-bar-style">-->
+                                        <!--<div class="feature-wrap"><span>Resolution</span><strong class="pull-right">4.0</strong></div>-->
+                                        <!--<div class="bar-wrap"><a style="width:80%;" class="votes-wrap"><span class="votes"></span></a></div>-->
+                                    <!--</li>-->
+                                <!--</ul>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">-->
+                    <!--<div class="panel panel-default">-->
+                        <!--<div class="panel-heading"><strong>#kalyani</strong><span class="pull-right">10 hrs ago</span></div>-->
+                        <!--<div class="panel-body">-->
+                            <!--<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">-->
+                                <!--<span class="overall">3.0-->
+                                    <!--<span>Overall</span>-->
+                                <!--</span>-->
+                            <!--</div>-->
+                            <!--<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">-->
+                                <!--<ul>-->
+                                    <!--<li class="ratings-bar-style">-->
+                                        <!--<div class="feature-wrap"><span>Lens</span><strong class="pull-right">3.0</strong></div>-->
+                                        <!--<div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>-->
+                                    <!--</li>-->
+                                    <!--<li class="ratings-bar-style">-->
+                                        <!--<div class="feature-wrap"><span>Connectivity</span><strong class="pull-right">3.0</strong></div>-->
+                                        <!--<div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>-->
+                                    <!--</li>-->
+                                    <!--<li class="ratings-bar-style">-->
+                                        <!--<div class="feature-wrap"><span>Resolution</span><strong class="pull-right">3.0</strong></div>-->
+                                        <!--<div class="bar-wrap"><a style="width:60%;" class="votes-wrap"><span class="votes"></span></a></div>-->
+                                    <!--</li>-->
+                                <!--</ul>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
             </div>
         </div>
     </section>
