--- a/src/main/webapp/detailedReviews.html
+++ b/src/main/webapp/detailedReviews.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="utf-8">
-    <title>User Reviews</title>
+    <title>Detailed Reviews</title>
     <link rel="stylesheet" type="text/css" href="css/layout.css">
     <link rel="stylesheet" type="text/css" href="css/detailed.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto' rel='stylesheet' type='text/css'>
@@ -147,7 +147,6 @@
                     <!--</div>-->
                 <!--</div>-->
             </div>
-        </div>
     </section>
     <!-- footer -->
     <footer>
