--- a/src/main/webapp/user-reviews.html
+++ b/src/main/webapp/user-reviews.html
@@ -8,6 +8,15 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-61824114-1', { 'cookieDomain': 'none' });
+        ga('send', 'pageview');
+    </script>
 </head>
 
 <body>
@@ -38,7 +47,7 @@
                     <span>Camera Reviews</span>
                         <!--<div class="row text-right">-->
                         <div>
-                            <input style="height: 35px; font-size: 13px; alignment: center;" placeholder="Select feature..." type="text" name = "featureDropdown" list="featureDropdown" id="featureDropdownValue" onclick="showButton()"/>
+                            <input style="height: 33px; font-size: 14px; alignment: center;" placeholder="Select feature..." type="text" name = "featureDropdown" list="featureDropdown" id="featureDropdownValue" onclick="showButton()"/>
                             <datalist id = "featureDropdown"></datalist>
                             <button id="filter" type="button" class="btn btn-success" disabled="true" onclick="selectedValue()">Filter</button>
                         </div>
