Show product name below product image

--- a/src/main/webapp/sortedReviews.html
+++ b/src/main/webapp/sortedReviews.html
@@ -43,7 +43,7 @@
         </nav>
     </header>
     <section id="section">
-        <div class="container-fluid" id="container">
+        <div class="container" id="container">
             <div class="row category-heading text-center">
                 <span>Camera Reviews </span>
                     <div>
