commit sign in with eBay

--- a/src/main/webapp/user-reviews.html
+++ b/src/main/webapp/user-reviews.html
@@ -71,7 +71,7 @@
 											Color Reproduction
 										</div>
 										<div class="feature-review-bar">
-											<div class="fill-yellow fill" data-width="228" style="width:228px;"></div>
+											<div class="fill-yellow fill" data-width="200" style="width:200px;"></div>
 										</div>
 										<div class="feature-rating yellow">3</div>
 										<div class="clear"></div>
@@ -93,9 +93,9 @@
 											Feature 4
 										</div>
 										<div class="feature-review-bar">
-											<div class="fill-light-green fill" data-width="240" style="width:240px;"></div>
+											<div class="fill-light-red fill" data-width="160" style="width:160px;"></div>
 										</div>
-										<div class="feature-rating light-green">4</div>
+										<div class="feature-rating light-red">2</div>
 										<div class="clear"></div>
 									</li>
 
@@ -104,7 +104,7 @@
 											Feature 5
 										</div>
 										<div class="feature-review-bar">
-											<div class="fill-red fill" data-width="171" style="width:171px;"></div>
+											<div class="fill-red fill" data-width="100" style="width:100px;"></div>
 										</div>
 										<div class="feature-rating red">1</div>
 										<div class="clear"></div>
@@ -323,6 +323,7 @@
         <p>©Company Copyright</p>
     </footer>
 
+        <script src="js/home.js"></script>
 	</div>
 </body>
 </html>
