--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/home.css">
     <link rel="stylesheet" type="text/css" href="css/menu.css">
-    <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
@@ -19,7 +19,7 @@
     </script>
 </head>
 <body>
-<div id="disablingDiv" ></div>
+<div class="disablingDiv"></div>
 <div class="wrapper">
     <header>
         <nav class="navbar navbar-background navbar-fixed-top">
@@ -34,11 +34,7 @@
                         </div>
                     </div>
                     <div class="login col-md-6">
-<<<<<<< HEAD
                         <a id="login" class="text-uppercase" href="#">Log In</a>
-=======
-                        <a class="text-uppercase" href="start.html">Log In</a>
->>>>>>> upstream/master
                         <img src="images/login-icon-purple.png">
                     </div>
                 </div>
@@ -74,9 +70,6 @@
                          <div class="item hot-product-background">
                             <img src="images/hot-products/hot-michael-kors-mens-watch-background1.png" class=img-responsive">
 
-                            <img src="images/hot-products/hot-michael-kors-mens-watch-background.png" class="img-responsive">
-
-                            
                            <!--  <div class="carousel-caption">
                                 <span style="font-size:20px">iPhone 6</span>
                             </div> -->
